[package]
name = "f1-telemetry-cli"
version = "0.1.1"
edition = "2021"
authors = ["Soham Desai sohamcodesstuff@gmail.com"]
license = "Apache-2.0"
description = "A tool to perform telemetry analysis on F1 racing data"
readme = "README.md"
repository = "https://github.com/SohamDesai1/f1-telemetry-cli"
keywords = ["cli", "telemetry", "f1"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.2.0"
dialoguer = "0.11.0"
native-dialog = "0.7.0"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
wsl = "0.1.0"
